intento de postear foto

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="formulario">
                     <label class="formulario__descripción" for="imagen">Imagen del Producto:</label>
-                    <input name="imagen" src="" class="formulario-completar" type="file" accept="image/*" id="imagenInput"  data-imagen />
+                    <input name="imagen" src="" class="formulario-completar"  id="imagenInput"  data-imagen />
                     <img id="imagenPreview" src="" alt="Vista previa" style="display:none;  width:160px ;
                     height: 170px;" >
                    
