--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="formulario">
                     <label class="formulario__descripción" for="imagen">Imagen del Producto:</label>
-                    <input name="imagen" src="" class="formulario-completar"  id="imagenInput"  data-imagen />
+                    <input name="imagen" src="" class="formulario-completar" type="file" accept="image/*"  id="imagenInput"  data-imagen />
                     <img id="imagenPreview" src="" alt="Vista previa" style="display:none;  width:160px ;
                     height: 170px;" >
                    
@@ -107,6 +107,7 @@
     <script src="carrusel.js"></script>
     <script src="javascript/GET.js" type="module"></script>
     <script src="./javascript/POST.js" type="module"></script>
+    <script type="module" src="./javascript/DELETE.JS"></script>
     <script src="./javascript/limpiar.js"></script>
     <script src="./javascript/subirfoto.js"></script>
 </body>
