probando si funciona el delete api

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -65,7 +65,7 @@
 
                 <div class="formulario botones">
                     <button type="submit"  class="todos_botones boton_1" id="enviar">Enviar</button>
-                    <button  class="todos_botones boton_2" id="limpiar">Limpiar</button>
+                    <button  class="todos_botones boton_2" id="limpiar" type="reset">Limpiar</button>
                 </div>
             </form>
         </section>
