Poniendo la función de eliminación

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!--Lista de productos-->
         <section class="desarrollo_listado_productos">
             <h2 class="titulo">Listado de Productos</h2> <hr>
-            <ul class="listado_producto" data-listado>
+            <ul class="listado_producto" id="Solicitudes" data-listado>
             </ul>
         </section>
     </main>
