Probando la función de busque de los alimentos agregados

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <a href="" class="cuenta_enlace">Ingresar a su cuenta</a>
             </div>
             <form action="búsqueda" class="cabecera__buscar__item">
-                <input type="search" placeholder=" Buscar Categoría de productos" id="buscar" class="buscar__input">
-                <label for="buscar" class="buscar__label"></label>
+                <input type="search" placeholder=" Buscar Categoría de productos" id="inputBuscar" class="buscar__input">
+                <label for="buscar" class="buscar__label" id="botonBuscar"></label>
             </form>
         </nav>
 
@@ -110,5 +110,6 @@
     <script type="module" src="./javascript/DELETE.JS"></script>
     <script src="./javascript/limpiar.js"></script>
     <script src="./javascript/subirfoto.js"></script>
+    <script type="module" src="./javascript/buscar.js"></script>
 </body>
 </html>
