Función de busqueda está lista

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <a href="" class="cuenta_enlace">Ingresar a su cuenta</a>
             </div>
             <form action="búsqueda" class="cabecera__buscar__item">
-                <input type="search" placeholder=" Buscar Categoría de productos" id="inputBuscar" class="buscar__input">
-                <label for="buscar" class="buscar__label" id="botonBuscar"></label>
+                <input type="search" placeholder=" Buscar Categoría de productos" id="inputBuscar" class="buscar__input" data-input-buscar>
+                <label for="buscar" class="buscar__label" id="botonBuscar" data-boton-busqueda></label>
             </form>
         </nav>
 
