Agregando un html al sección de cuenta

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nombre_empresa">¡Cocínalo tú mismo!</div>
             <div class="menu_cuenta">
                 <a href="index.html" class="menu_enlace">Menú Principal</a>
-                <a href="" class="cuenta_enlace">Ingresar a su cuenta</a>
+                <a href="cuenta.html" class="cuenta_enlace">Ingresar a su cuenta</a>
             </div>
             <form action="búsqueda" class="cabecera__buscar__item">
                 <input type="search" placeholder=" Buscar Categoría de productos" id="inputBuscar" class="buscar__input" data-input-buscar>
@@ -57,7 +57,7 @@
 
                 <div class="formulario">
                     <label class="formulario__descripción" for="imagen">Imagen del Producto:</label>
-                    <input name="imagen" src="" class="formulario-completar" type="file" accept="image/*"  id="imagenInput"  data-imagen />
+                    <input name="imagen" src="" class="formulario-completar"   id="imagenInput" type="file" accept="image/*" data-imagen />
                     <img id="imagenPreview" src="" alt="Vista previa" style="display:none;  width:160px ;
                     height: 170px;" >
                    
