--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="cuenta.html" class="cuenta_enlace">Ingresar a su cuenta</a>
             </div>
             <form action="búsqueda" class="cabecera__buscar__item">
-                <input type="search" placeholder=" Buscar Categoría de productos" id="inputBuscar" class="buscar__input" data-input-buscar>
+                <input type="search" placeholder=" Buscar productos" id="inputBuscar" class="buscar__input" data-input-buscar>
                 <label for="buscar" class="buscar__label" id="botonBuscar" data-boton-busqueda></label>
             </form>
         </nav>
